--- a/index.css
+++ b/index.css
@@ -1,3 +1,50 @@
-#heading {
-    color: red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border:1px solid black;
+}
+
+.logo {
+    width: 100px;
+}
+
+.nav-items {
+    padding: 0px 20px;
+}
+
+.nav-items > ul {
+    font-size: 24px;
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card {
+    padding: 5px;
+    width: 200px;
+    margin: 5px;
+}
+
+.res-card:hover {
+    cursor:pointer;
+    border:1px solid black;
+    /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset; */
+}
+
+
+.search {
+    padding: 10px;
+}
+
+.res-logo {
+    width: 190px;
 }
